# ec2-priceit

./: .gitignore  README.md  trigger.yaml
api-backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  pyproject.toml
api-backend/tests/: README.md  __init__.py  conftest.py  test_main.py
docs/: frontend-experience-plan.md  plan.md  tasks.md
examples/: 2-versionIndexUrl-file.json  3-global-pricing-file-sample.csv  4-currentSavingsPlanIndexUrl-list.json  5-ap-east-2-savingsplan-pricing.csv  aws-calculator-output.md  cost-input.csv  global-pricing-list-info.md  how-to-download-pricing.md  how-to-match-pricing.md  regional-pricing-list-info.md
frontend/: .env.example  Dockerfile  Makefile  README.md  cloudbuild.yaml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/templates/: bulk-upload-template.csv
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: ConnectGoogleCard.tsx  ReauthReminderCard.tsx
frontend/src/context/: AuthContext.tsx  ExportHistoryContext.tsx
frontend/src/hooks/: useAPI.ts  useTelemetry.ts
frontend/src/lib/: api.ts  authStorage.ts  errorHandling.ts  queryClient.ts
frontend/src/pages/: Activity.tsx  AdHocPricing.tsx  BulkUpload.tsx  Dashboard.tsx  PricingExplorer.tsx  Settings.tsx
frontend/src/store/: useDashboardStore.ts
frontend/src/types/: api.ts  auth.ts
pricing-update-job/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Makefile.test  README.md  cloudbuild.yaml  main.py  pyproject.toml
(+14 files in other folders)
